--- a/src/base.css
+++ b/src/base.css
@@ -1,13 +1,114 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: "MazzardL";
+  src: url("./assets/fonts/MazzardL-Regular.otf") format("truetype");
+  font-weight: 400;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "MazzardL";
+  src: url("./assets/fonts/MazzardL-SemiBold.otf") format("truetype");
+  font-weight: 600;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+
+:root {
+  --text-color: #1d263a;
+  --beige-color: #fae2da;
+  --orange-color: #ff794d;
+  --white-color: #fff;
+  --green-color-25: #d6ebe4;
+  --green-color-100: #20bfa9;
+  --blue-color-25: #ebf5ff;
+  --grey-color-25: #f9fafb;
+  --grey-color-50: #dfdfdfb3;
+  --grey-color-100: #dfdfdf7c;
+}
+
+body {
+  font-family: "MazzardL", sans-serif;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+.heading-1 {
+  color: #213053;
+  font-size: 6rem;
+  font-weight: 600;
+  line-height: 5.4rem;
+}
+
+.heading-3 {
+  color: var(--text-color);
+  font-size: 4.2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 5rem;
+  
+}
+
+.heading-4 {
+  color: var(--text-color);
+  font-size: 3.6rem;
+  font-weight: 600;
+  line-height: 4.6rem;
+}
+
+.heading-5 {
+  color: var(--text-color);
+  font-size: 2.4rem;
+  font-weight: 600;
+  line-height: 3.2rem;
+}
+
+.text-md {
+  color: var(--text-color);
+  opacity: 0.6;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 2.6rem;
+}
+
+.text-lg {
+  color: var(--text-color);
+  opacity: 0.6;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 3rem;
+}
+
+.uppercase-text-1 {
+  color: var(--text-color);
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 3rem;
+  letter-spacing: 0.6rem;
+}
+
+.uppercase-text-2 {
+  color: var(--text-color);
+  font-size: 1.4rem;
+  font-weight: 600;
+  line-height: 2.2rem;
+  letter-spacing: 0.6rem;
+}
+
+.container {
+  max-width: 160rem;
+  margin: 0 auto;
+  padding-left: 6.1rem;
+  padding-right: 6.1rem;
+  font-size: 0;
 }
