--- a/src/pages/home/sections/about/About.css
+++ b/src/pages/home/sections/about/About.css
@@ -6,6 +6,10 @@
 
 .about-section__content {
     padding: 16rem 9.1rem;
+
+    @media (max-width: 800px) {
+        padding-bottom: 5rem;
+    }
 }
 
 .about-section__left {
@@ -13,6 +17,14 @@
     vertical-align: top;
     margin-right: 11.8rem;
     width: calc((100% - 11.8rem) * 0.5);
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 10rem;
+    }
 }
 
 .about-section__left .img-box {
@@ -32,6 +44,15 @@
     position: absolute;
     top: 80%;
     left: 50%;
+
+    @media (max-width: 850px) {
+        width: 50%;
+    }
+
+    @media (max-width: 800px) {
+        height: 30%;
+        width: 30%;
+    }
 }
 
 .about-section__right {
@@ -39,16 +60,44 @@
     display: inline-block;
     vertical-align: top;
     padding-top: 17.4rem;
+
+    @media (max-width: 1200px) {
+        padding-top: 12rem;
+        padding-bottom: 8rem;
+    }
+
+    @media (max-width: 1100px) {
+        padding-top: 2rem;
+    }
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
 }
 
 .about-section__right_container {
     width: 80%;
+
+    @media (max-width: 1300px) {
+        width: 100%;
+    }
 }
 
 .about-section__right h3 {
     margin-bottom: 2rem;
+
+    @media (max-width: 800px) {
+        margin-bottom: 7rem;
+    }
 }
 
 .about-section__right p {
     margin-bottom: 4.8rem;
+
+    @media (max-width: 800px) {
+        margin-bottom: 7rem;
+    }
 }
