--- a/src/pages/home/sections/designs/Designs.css
+++ b/src/pages/home/sections/designs/Designs.css
@@ -4,16 +4,38 @@
     padding: 0 9.1rem;
     margin-bottom: 14rem;
     position: relative;
+
+    @media (max-width: 1100px) {
+        margin-bottom: 2rem;
+    }
 }
 
 #designs-section .heading-3 {
     margin-bottom: 4.6rem;
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 5rem;
+        font-size: 6rem;
+        text-align: center;
+    }
 }
 
 .arrows {
     position: absolute;
     top: 1.6rem;
     right: 9.1rem;
+
+    @media (max-width: 800px) {
+        display: none;
+    }
+
+    @media (max-width: 1200px) {
+        top: 7rem;
+        right: 5rem;
+    }
 }
 
 .arrow-right,
@@ -42,10 +64,20 @@
     width: 100%;
     object-fit: cover;
     border-radius: 1.5rem;
+
+    @media (max-width: 1100px) {
+        height: 54rem;
+    }
 }
 
 #design-last-card {
     position: relative;
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+    }
 }
 
 .design-inner-card {
@@ -58,6 +90,11 @@
     position: absolute;
     left: 1.6rem;
     bottom: 1.6rem;
+
+    @media (max-width: 800px) {
+        left: 3rem;
+        bottom: 3rem;
+    }
 }
 
 .design-inner-card span {
@@ -65,6 +102,10 @@
     font-size: 3.2rem;
     font-weight: 600;
     line-height: 4.2rem;
+
+    @media (max-width: 1100px) {
+        display: none;
+    }
 }
 
 #inner-card-text {
@@ -82,4 +123,17 @@
     width: 2rem;
     right: 2.4rem;
     bottom: 2.4rem;
+}
+
+.couch {
+    @media (max-width: 800px) {
+        height: 85rem;
+    }
+}
+
+.chair-light,
+.chair-dark {
+    @media (max-width: 800px) {
+        display: none;
+    }
 }
