--- a/src/pages/home/sections/features/Features.css
+++ b/src/pages/home/sections/features/Features.css
@@ -3,35 +3,83 @@
 .features-section__content {
     padding: 0 9.1rem;
     margin-bottom: 10rem;
+
+    @media (max-width: 1300px) {
+        margin-bottom: 5rem;
+    }
+
+    @media (max-widht: 1200px) {
+        margin-bottom: 3rem;
+    }
+
+    @media (max-widht: 1100px) {
+        margin-bottom: 0;
+    }
 }
 
 .feature:not(:last-child) {
     margin-right: 10rem;
+
+    @media (max-width: 1100px) {
+        margin-right: 3.2rem;
+    }
 }
 
 .feature {
     width: calc((100% - 20rem) / 3);
     display: inline-block;
     vertical-align: top;
+
+    @media (max-width: 1100px) {
+        width: calc((100% - 6.4rem) / 3);
+    }
+
+    @media (max-width: 800px) {
+        width: 100%;
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 5rem;
+    }
 }
 
 .feature-icon,
 .feature-text {
     display: inline-block;
     vertical-align: middle;
+
+    @media (max-width: 600px) {
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 4rem;
+    }
 }
 
 .feature-icon {
     width: calc((100% - 4.2rem) * 0.3);
     margin-right: 4.2rem;
+
+    @media (max-width: 800px) {
+        width: 20%;
+        margin-right: 0;
+    }
 }
 
 .feature-text {
     width: calc((100% - 4.2rem) * 0.7);
+
+    @media (max-width: 800px) {
+        width: 80%;
+    }
 }
 
 .feature-text h5 {
     margin-bottom: 1rem;
+
+    @media (max-width: 800px) {
+        font-size: 3.6rem;
+        margin-bottom: 1rem;
+    }
 }
 .ellipse {
     position: relative;
