--- a/src/pages/home/sections/footer/Footer.css
+++ b/src/pages/home/sections/footer/Footer.css
@@ -5,6 +5,10 @@
     border-radius: 3rem;
     padding: 14rem 9.1rem;
     margin-bottom: 10rem;
+
+    @media (max-width: 800px) {
+        padding-top: 8rem;
+    }
 }
 
 .footer__content > *:not(:last-child) {
@@ -14,6 +18,14 @@
 .footer-column {
     display: inline-block;
     vertical-align: top;
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 5rem;
+        text-align: center;
+    }
 }
 
 .footer__content > *:not(:first-child) {
@@ -32,14 +44,39 @@
 .footer__brand img,
 .footer__heading {
     margin-bottom: 6.5rem;
+
+    @media (max-width: 800px) {
+        margin-bottom: 1.6rem;
+    }
 }
 
 .footer__brand img + p {
     margin-bottom: 3.4rem;
+
+    @media (max-width: 800px) {
+        margin-bottom: 1.6rem;
+    }
 }
 
 .footer__content a,
 p {
     display: block;
     margin-bottom: 2rem;
+
+    @media (max-width: 800px) {
+        margin-bottom: 1rem;
+    }
+}
+
+.footer__content .text-lg {
+    @media (max-width: 800px) {
+        font-size: 2.8rem;
+        line-height: 4.2rem;
+    }
+
+    @media (max-width: 600px) {
+        font-size: 3.2rem;
+        line-height: 3.8rem;
+        letter-spacing: 0.2rem;
+    }
 }
