--- a/src/pages/home/sections/header/Header.css
+++ b/src/pages/home/sections/header/Header.css
@@ -13,6 +13,10 @@
 .navigation {
     display: inline-block;
     width: calc(100% - 8rem);
+
+    @media (max-width: 800px) {
+        display: none;
+    }
 }
 
 .navigation__links {
@@ -45,20 +49,20 @@
     font-weight: 600;
     line-height: 3rem;
     vertical-align: top;
-}
 
-/* #mobile-nav-icon {
-    display: none;
-} */
-
-.navigation {
-    display: none;
+    @media (max-width: 1200px) {
+        font-size: 2.4rem;
+    }
 }
 
 #mobile-nav-icon {
-    display: inline-block;
-    position: absolute;
-    right: 9rem;
+    display: none;
+
+    @media (max-width: 800px) {
+        display: inline-block;
+        position: absolute;
+        right: 9rem;
+    }
 }
 
 .close-icon {
@@ -90,7 +94,7 @@
     text-align: left;
 }
 
-.mobile-nav_link li{
+.mobile-nav_link li {
     margin-bottom: 5rem;
 }
 /* .showMenu {
