--- a/src/pages/home/sections/process/Process.css
+++ b/src/pages/home/sections/process/Process.css
@@ -3,6 +3,10 @@
 .process-section__content {
     padding: 0 9.1rem;
     margin-bottom: 10rem;
+
+    @media (max-width: 1100px) {
+        margin-bottom: 0;
+    }
 }
 
 #process-section .uppercase-text-1 {
@@ -12,6 +16,10 @@
 
 .process-row:not(:last-child) {
     margin-bottom: 15rem;
+
+    @media (max-width: 1100px) {
+        margin-bottom: 4rem;
+    }
 }
 
 .num {
@@ -24,6 +32,33 @@
     margin-top: 0.5rem;
     display: inline-block;
     vertical-align: top;
+
+    @media (max-width: 1200px) {
+        width: calc((100% - 9rem) * 0.05);
+        margin-right: 1rem;
+        font-size: 2rem;
+        font-weight: 600;
+        line-height: 2.2rem;
+    }
+
+    @media (max-width: 1100px) {
+        width: calc((100% - 9rem) * 0.05);
+        margin-right: 1rem;
+        font-size: 2rem;
+        font-weight: 600;
+        line-height: 2.2rem;
+    }
+
+    @media (max-width: 800px) {
+        width: 10%;
+        margin-right: 0;
+    }
+
+    @media (max-width: 600px) {
+        display: block;
+        width: 100%;
+        margin-bottom: 2rem;
+    }
 }
 
 .process-row h4 {
@@ -37,6 +72,37 @@
     vertical-align: top;
     display: inline-block;
     margin-right: 8rem;
+
+    @media (max-width: 1300px) {
+        width: calc((100% - 14rem) * 0.35);
+        margin-right: 6rem;
+    }
+
+    @media (max-width: 1200px) {
+        width: calc((100% - 9rem) * 0.35);
+        margin-right: 4rem;
+    }
+
+    @media (max-width: 1100px) {
+        width: calc((100% - 9rem) * 0.35);
+        margin-right: 4rem;
+    }
+
+    @media (max-width: 800px) {
+        width: 40%;
+        margin-right: 0;
+    }
+
+    @media (max-width: 700px) {
+        width: 30%;
+        margin-right: 2rem;
+    }
+
+    @media (max-width: 600px) {
+        display: block;
+        width: 100%;
+        margin-bottom: 2rem;
+    }
 }
 
 .process-row .text-lg {
@@ -46,13 +112,84 @@
     margin-right: 8rem;
     vertical-align: top;
     display: inline-block;
+
+    @media (max-width: 1300px) {
+        width: calc((100% - 14rem) * 0.35);
+        margin-right: 6rem;
+    }
+
+    @media (max-width: 1200px) {
+        width: calc((100% - 9rem) * 0.35);
+        margin-right: 4rem;
+    }
+
+    @media (max-width: 800px) {
+        width: 40%;
+        margin-right: 0;
+        vertical-align: middle;
+        font-size: 2.4rem;
+    }
+
+    @media (max-width: 700px) {
+        margin-right: 2rem;
+    }
+
+    @media (max-width: 600px) {
+        display: block;
+        width: 100%;
+        margin-bottom: 2rem;
+        font-size: 2.8rem;
+        line-height: 3.2rem;
+    }
 }
+
 .process-link {
     width: calc((100% - 18rem) * 0.25);
     display: inline-block;
     margin-top: 3.2rem;
+
+    @media (max-width: 1300px) {
+        width: calc((100% - 14rem) * 0.25);
+    }
+
+    @media (max-width: 1200px) {
+        width: calc((100% - 9rem) * 0.25);
+    }
+
+    @media (max-width: 600px) {
+        display: block;
+        width: 100%;
+        margin-bottom: 2rem;
+        text-align: left;
+    }
 }
 
 .process-link a {
     display: inline-block;
+
+    @media (max-width: 1100px) {
+        font-size: 1rem;
+        line-height: 1.1rem;
+    }
+
+    @media (max-width: 800px) {
+        width: 10%;
+        vertical-align: middle;
+        text-align: end;
+    }
+
+    @media (max-width: 600px) {
+        vertical-align: middle;
+    }
+}
+
+.process-link .orange-line {
+    @media (max-width: 800px) {
+        display: none;
+    }
+
+    @media (max-width: 600px) {
+        display: inline-block;
+        vertical-align: middle;
+    }
 }
