--- a/src/pages/home/sections/subscribe/Subscribe.css
+++ b/src/pages/home/sections/subscribe/Subscribe.css
@@ -14,6 +14,12 @@
     margin: 0 auto;
     text-align: center;
     margin-bottom: 7rem;
+
+    @media (max-width: 800px) {
+        font-size: 2.4rem;
+        line-height: 3.8rem;
+        letter-spacing: 0.2rem;
+    }
 }
 
 .email-input {
@@ -31,6 +37,14 @@
     font-weight: 400;
     line-height: 3rem;
     margin-bottom: 3.4rem;
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 75%;
+        margin: 0 auto;
+        border-radius: 2rem;
+        margin-bottom: 4rem;
+    }
 }
 
 .subscribe-input {
@@ -51,6 +65,12 @@
     line-height: 2.2rem;
     letter-spacing: 0.4rem;
     text-transform: uppercase;
+
+    @media (max-width: 800px) {
+        width: 75%;
+        border-radius: 2rem;
+        margin-bottom: 4rem;
+    }
 }
 
 .promise-container {
