--- a/src/pages/home/sections/testimonials/Testimonials.css
+++ b/src/pages/home/sections/testimonials/Testimonials.css
@@ -7,17 +7,41 @@
 
 .testimonials-section__content {
     margin-bottom: 13.6rem;
+
+    @media (max-width: 1100px) {
+        margin-bottom: 8rem;
+    }
 }
 
 .testimonials-section__left {
     display: inline-block;
     width: 50%;
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 100%;
+        text-align: left;
+        margin-bottom: 10rem;
+    }
 }
 .left-content {
     margin: 0 auto;
     padding-top: 18rem;
     padding-left: 14rem;
     padding-right: 6rem;
+
+    @media (max-width: 1100px) {
+        padding-top: 14rem;
+        padding-left: 10rem;
+        padding-right: 4rem;
+        /* text-align: center; */
+    }
+
+    @media (max-width: 800px) {
+        padding-top: 12rem;
+        padding-left: 8rem;
+        padding-right: 8rem;
+    }
 }
 
 .testimonials-section__left .heading-3 {
@@ -52,6 +76,11 @@
     display: inline-block;
     vertical-align: top;
     width: 50%;
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 100%;
+    }
 }
 
 .testimonials-img-box {
