--- a/src/pages/home/sections/footer/Footer.css
+++ b/src/pages/home/sections/footer/Footer.css
@@ -6,18 +6,23 @@
     padding: 14rem 9.1rem;
     margin-bottom: 10rem;
 
-    @media (max-width: 800px) {
-        padding-top: 8rem;
+    @media (max-width: 1200px) {
+        padding: 5rem;
     }
-}
 
-.footer__content > *:not(:last-child) {
-    margin-right: 2.6rem;
+    @media (max-width: 800px) {
+        padding: 8rem 3rem;
+    }
 }
 
 .footer-column {
     display: inline-block;
     vertical-align: top;
+}
+
+.footer__content > *:not(:first-child) {
+    width: calc((100% * 0.7) / 3);
+    text-align: center;
 
     @media (max-width: 800px) {
         display: block;
@@ -28,20 +33,29 @@
     }
 }
 
-.footer__content > *:not(:first-child) {
-    width: calc(((100% - 7.8rem) * 0.7) / 3);
-}
-
 .footer__brand {
-    width: calc((100% - 7.8rem) * 0.3);
+    width: 30%;
+
+    @media (max-width: 800px) {
+        display: block;
+        width: 70%;
+        margin: 0 auto;
+        margin-bottom: 5rem;
+        text-align: center;
+    }
 }
 
 .footer__brand img {
-    height: 2.8rem;
-    width: auto;
+    width: 14rem;
+    height: auto;
+    margin-bottom: 6.5rem;
+
+    @media (max-width: 800px) {
+        width: 18rem;
+        margin-bottom: 5rem;
+    }
 }
 
-.footer__brand img,
 .footer__heading {
     margin-bottom: 6.5rem;
 
@@ -69,6 +83,7 @@ p {
 }
 
 .footer__content .text-lg {
+
     @media (max-width: 800px) {
         font-size: 2.8rem;
         line-height: 4.2rem;
