--- a/src/pages/home/sections/designs/Designs.css
+++ b/src/pages/home/sections/designs/Designs.css
@@ -5,8 +5,16 @@
     margin-bottom: 14rem;
     position: relative;
 
+    @media (max-width: 1200px) {
+        padding: 5rem;
+    }
+
     @media (max-width: 1100px) {
         margin-bottom: 2rem;
+    }
+
+    @media (max-width: 800px) {
+        padding: 3rem;
     }
 }
 
