--- a/src/pages/home/sections/hero-section/Hero.css
+++ b/src/pages/home/sections/hero-section/Hero.css
@@ -6,9 +6,18 @@
     margin-bottom: 10rem;
     padding: 7.6rem 9.1rem;
 
+    @media (max-width: 1200px) {
+        padding: 5rem;
+    }
+
     @media (max-width: 1100px) {
         margin-bottom: 4rem;
     }
+
+    @media (max-width: 800px) {
+        padding: 3rem;
+    }
+    
 }
 
 .hero-section__left {
@@ -131,7 +140,7 @@
     }
 }
 
-.hero-section__right p {
+.hero-section__right .text-md {
     margin-bottom: 5.8rem;
 
     @media (max-width: 850px) {
@@ -139,6 +148,6 @@
     }
 
     @media (max-width: 800px) {
-        margin-bottom: 5.8rem;
+        margin-bottom: 8rem;
     }
 }
