Finish styles for mobile version

--- a/src/pages/home/sections/about/About.css
+++ b/src/pages/home/sections/about/About.css
@@ -99,10 +99,16 @@
     }
 }
 
-.about-section__right p {
+.about-section__right .text-md {
     margin-bottom: 4.8rem;
 
     @media (max-width: 800px) {
         margin-bottom: 7rem;
+    }
+}
+
+.about-span {
+    @media (max-width: 800px) {
+        text-align: start;
     }
 }
