--- a/src/base.css
+++ b/src/base.css
@@ -206,7 +206,7 @@ a {
     margin-right: 2rem;
     background-color: var(--orange-color);
     display: inline-block;
-    margin-bottom: 0.3rem;
+    margin-top: 0.6rem;
 
     @media (max-width: 1250px) {
         width: 3rem;
