--- a/src/pages/home/sections/footer/Footer.css
+++ b/src/pages/home/sections/footer/Footer.css
@@ -18,6 +18,10 @@
 .footer-column {
     display: inline-block;
     vertical-align: top;
+
+    @media (max-width: 800px) {
+        margin-bottom: 10rem;
+    }
 }
 
 .footer__content > *:not(:first-child) {
@@ -28,7 +32,7 @@
         display: block;
         width: 100%;
         margin: 0 auto;
-        margin-bottom: 5rem;
+        margin-bottom: 8rem;
         text-align: center;
     }
 }
