--- a/src/pages/home/sections/process/Process.css
+++ b/src/pages/home/sections/process/Process.css
@@ -11,7 +11,7 @@
     @media (max-width: 1100px) {
         margin-bottom: 0;
     }
-    
+
     @media (max-width: 800px) {
         padding: 3rem;
     }
@@ -58,7 +58,7 @@
     }
 
     @media (max-width: 800px) {
-        width: 10%;
+        width: 7%;
         margin-right: 0;
     }
 
@@ -97,14 +97,10 @@
     }
 
     @media (max-width: 800px) {
-        width: 40%;
-        margin-right: 0;
-    }
-
-    @media (max-width: 700px) {
         width: 30%;
         margin-right: 2rem;
     }
+
 
     @media (max-width: 600px) {
         display: block;
@@ -149,6 +145,8 @@
         font-size: 2.8rem;
         line-height: 3.2rem;
     }
+
+
 }
 
 .process-link {
@@ -164,11 +162,19 @@
         width: calc((100% - 9rem) * 0.25);
     }
 
+    @media (max-width: 800px) {
+        width: 10%;
+        margin-right: 0;
+        vertical-align: bottom;
+        font-size: 2.4rem;
+        text-align: end;
+
+    }
+
     @media (max-width: 600px) {
         display: block;
         width: 100%;
         margin-bottom: 2rem;
-        text-align: left;
     }
 }
 
