--- a/src/pages/home/sections/subscribe/Subscribe.css
+++ b/src/pages/home/sections/subscribe/Subscribe.css
@@ -84,6 +84,14 @@
     width: 1.5rem;
     height: 1.5rem;
     display: inline-block;
+
+    @media (max-width: 800px) {
+        top: 0.7rem;
+    }
+
+    @media (max-width: 400px) {
+        display: none;
+    }
 }
 
 .promise-container .text-md {
