Fix paddings of mobile version

--- a/src/base.css
+++ b/src/base.css
@@ -183,6 +183,11 @@ a {
         padding-left: 4rem;
         padding-right: 4rem;
     }
+
+    @media (max-width: 500px) {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 }
 
 .hero-section__content,
