--- a/src/pages/home/sections/testimonials/Testimonials.css
+++ b/src/pages/home/sections/testimonials/Testimonials.css
@@ -42,6 +42,11 @@
         padding-left: 8rem;
         padding-right: 8rem;
     }
+
+    @media (max-width: 500px) {
+        padding-left: 4rem;
+        padding-right: 4rem;
+    }
 }
 
 .testimonials-section__left .heading-3 {
