--- a/src/pages/home/sections/hero-section/Hero.css
+++ b/src/pages/home/sections/hero-section/Hero.css
@@ -71,12 +71,20 @@
     height: 31.3rem;
     position: absolute;
     top: 7rem;
-    right: 0;
+    right: 5rem;
+
+    @media (max-width: 1500px) {
+        right: 0;
+    }
+
+    @media (max-width: 1500px) {
+        right: -1%;
+    }
 
     @media (max-width: 1100px) {
-        width: 24rem;
-        height: 24rem;
-        top: 7rem;
+        width: 28rem;
+        height: 28rem;
+        top: 7%;
     }
 
     @media (max-width: 850px) {
@@ -88,7 +96,7 @@
         width: 34rem;
         height: 34rem;
         top: 8rem;
-        right: 7%;
+        right: 5%;
     }
 
     @media (max-width: 600px) {
